# cvz

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
frontend/: index.html
src/cvscan/: main.py  setup.py
src/cvscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cvscan/data/: roles.json
src/cvscan/engines/: keyword_engine.py  spacy_engine.py  structure_engine.py
src/cvscan/parser/: docx_parser.py  pdf_parser.py
src/cvscan/utils/: cleaner.py  loader.py  scorer.py
src/cvx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cvz.egg-info/: PKG-INFO  SOURCES.txt
src/scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
